--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "prettier": "^3.2.5",
     "prettier-eslint-cli": "^8.0.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
+    "remix-development-tools": "^4.1.4",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
     "vite-tsconfig-paths": "^4.2.1"
