--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "prettier-eslint-cli": "^8.0.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "remix-development-tools": "^4.1.4",
+    "remix-flat-routes": "^0.6.4",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
