--- a/.prettierrc
+++ b/.prettierrc
@@ -1,27 +1,35 @@
 {
-  "plugins": [
-    "@trivago/prettier-plugin-sort-imports",
-    "prettier-plugin-tailwindcss"
-  ],
-  "tailwindFunctions": ["clsx", "cva", "cn"],
-  "trailingComma": "all",
-  "tabWidth": 2,
-  "printWidth": 80,
-  "semi": false,
-  "singleAttributePerLine": true,
-  "singleQuote": true,
+  "arrowParens": "avoid",
+  "bracketSameLine": false,
+  "bracketSpacing": true,
+  "embeddedLanguageFormatting": "auto",
+  "endOfLine": "lf",
+  "htmlWhitespaceSensitivity": "css",
   "importOrder": [
-    "<THIRD_PARTY_MODULES>",
     "^@/types/(.*)$",
-    "^@/contexts/(.*)$",
-    "^@/functions/(.*)$",
-    "^@/hooks/(.*)$",
+    "<THIRD_PARTY_MODULES>",
     "^@/components/ui/(.*)$",
     "^@/components/blocks/(.*)$",
     "^@/components/fragments/(.*)$",
-    "^@/locales/(.*)$",
     "^@/lib/(.*)$"
   ],
-  "importOrderSeparation": true,
-  "importOrderSortSpecifiers": true
+  "importOrderSeparation": false,
+  "importOrderSortSpecifiers": true,
+  "insertPragma": false,
+  "jsxSingleQuote": false,
+  "printWidth": 80,
+  "proseWrap": "always",
+  "quoteProps": "as-needed",
+  "requirePragma": false,
+  "semi": false,
+  "singleAttributePerLine": true,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "tailwindFunctions": ["clsx", "cva", "cn"],
+  "trailingComma": "all",
+  "useTabs": false,
+  "plugins": [
+    "@trivago/prettier-plugin-sort-imports",
+    "prettier-plugin-tailwindcss"
+  ]
 }
