--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "remix vite:build",
     "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "format": "bunx prettier . --write --ignore-path .gitignore ./node_modules",
+    "format": "bunx prettier . --write",
     "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc"
   },
