--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "typescript.preferences.importModuleSpecifier": "non-relative",
   "eslint.probe": ["typescript", "typescriptreact"],
   "editor.formatOnSave": true,
   "eslint.validate": ["typescript", "typescriptreact"],
