--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@nasa-gcn/remix-seo": "^2.0.0",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@remix-run/node": "^2.9.1",
     "@remix-run/react": "^2.9.1",
