chore: use pnpm as default package manager

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,8 @@
   },
   "problems.showCurrentInStatus": false,
   "remix-forge.componentFolder": "/app/components/ui",
-  "i18n-ally.localesPaths": ["public/locales", "app/lib/i18n"]
+  "i18n-ally.localesPaths": ["public/locales", "app/lib/i18n"],
+  "[dotenv]": {
+    "editor.defaultFormatter": "foxundermoon.shell-format"
+  }
 }
