--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "compression": "^1.7.4",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.2.0",
     "helmet": "^7.1.0",
     "isbot": "^4.1.0",
     "lucide-react": "^0.376.0",
